[package]
name = "bss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = "0.29.1"
chrono = "0.4.22"
dot = "0.1.4"
log = "0.4.17"
log4rs = "1.2.0"
rand = { version = "0.8.5"}
rand_distr = "0.4.3"
secp256k1 = {version = "0.24.0", features = ["rand", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
serde_derive = "1.0"
sha2 = "0.10.6"
