[package]
name = "bss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = "0.29.1"
bytes = "1"
chrono = "0.4.22"
csv = "1.1.6"
dot = "0.1.4"
ed25519-dalek = {version = "1", features = ["serde", "batch", "alloc", "nightly"]}
itertools = "0.10.5"
local-ip-address = "0.5.1"
log = "0.4.17"
log4rs = "1.2.0"
mini-redis = "0.4"
map-macro = "0.2.5"
num_cpus = "1.15.0"
phf = {version = "0.11.1", features = ["macros"]}
port_scanner = "0.1.5"
rand_1 = {package = "rand", version = "0.8.5"}
rand_2 = {package = "rand", version = "0.7"}
rand_distr = "0.4.3"
secp256k1 = {version = "0.24.0", features = ["rand", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.1"
serde_derive = "1.0"
sha2 = "0.10.6"
tokio = {version = "1", features = ["full"]}

[features]
nightly = ["ed25519-dalek/nightly"]

# [build]
# rustflags = ["-C", "target_cpu=native","target-feature=avx2_backend"]

