[package]
name = "bss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5"}
sha2 = "0.10.6"
secp256k1 = {version = "0.24.0", features = ["rand"]}
bitcoin = "0.29.1"
rand_distr = "0.4.3"
